--- a/samotoi/autorize/templates/autorize/UResults.html
+++ b/samotoi/autorize/templates/autorize/UResults.html
@@ -30,8 +30,8 @@
 
       <a href="#">
       <div class='nik'>
-          <img src="{% static 'autorize/img/user.png'%}"></img>
-          <h4>Кирилл</h4>
+          <img src="{% static 'autorize/img/user.png'%}" ></img>
+          <h4>№674533</h4>
           </div>
         </a>
     </div>
@@ -40,13 +40,12 @@
     <div class="office">
         <div class="block_1">
             <div class="nav_1">
-                <img class="user_2" src="{% static 'autorize/img/user.png'%}"></img>
-                <h2 class="name_1">Илья Кириллов</h2>
+                <img class="user_2" src="{% static 'autorize/img/user2.png'%}" ></img>
+                <h2 class="name_1">№674533</h2>
                 <div class="line_1"></div>
                 <div class="nav_2">
               <nav>
                 <ul>
-                  <a href="/profile"><li>Личные данные</li></a>
                   <a href="/history"><li>Мои тесты</li></a>
                   <a href="#"><li>Результаты тестов</li></a>
                   <a href="consultation"><li>Консультация</li></a>
