--- a/samotoi/autorize/templates/autorize/UConsultation.html
+++ b/samotoi/autorize/templates/autorize/UConsultation.html
@@ -31,7 +31,7 @@
       <a href="#">
       <div class='nik'>
           <img src="{% static 'autorize/img/user.png'%}"></img>
-          <h4>Кирилл</h4>
+          <h4>№674533</h4>
           </div>
         </a>
     </div>
@@ -41,7 +41,7 @@
         <div class="block_1">
             <div class="nav_1">
                 <img class="user_2" src="{% static 'autorize/img/user2.png'%}"></img>
-                <h2 class="name_1">Илья Кириллов</h2>
+                <h2 class="name_1">№674533</h2>
                 <div class="line_1"></div>
                 <div class="nav_2">
               <nav>
