--- a/samotoi/autorize/templates/autorize/Home.html
+++ b/samotoi/autorize/templates/autorize/Home.html
@@ -33,7 +33,7 @@
           <a href = "/profile"><img src="{% static 'autorize/img/user.png'%}"></img></a>
         {% else %}
           <a href="/login"><button class="bt1">Авторизация</button></a>
-          <a href="/login"><button class="bt1">Админ</button></a>
+          <a href="/admin"><button class="bt1">Админ</button></a>
         {% endif %}
         
     </div>
