--- a/samotoi/autorize/templates/autorize/UConsultation.html
+++ b/samotoi/autorize/templates/autorize/UConsultation.html
@@ -60,14 +60,14 @@
               Консультация
             </h1>
             <p class="message_2">Для лучшего понимани ваших результатов рекомендуем пройти<br/> консультацию со специальстом, который подробно объяснит все<br/> детали и ответит на ваши вопросы</p>
-            <form>
+            <form method="post" name="consultation">
               <div>
-               <label>Ваш телефон</label>
-              <input class="form" type="text" name="fio"/>
+               <label id="number-phone">Ваш телефон</label>
+              <input class="form" type="tel" name="phone" id="number-phone"/>
               </div>
               <div>
-               <label>Интересующий тест</label>
-              <input class="form" type="text" name="email"/>
+               <label for="interest">Интересующий тест</label>
+              <input class="form" type="text" name="test" id="interest"/>
               </div>
               <div>
               <div >
