--- a/samotoi/autorize/templates/autorize/moffice.html
+++ b/samotoi/autorize/templates/autorize/moffice.html
@@ -50,7 +50,7 @@
                   <a href="#"><li>Добавление пользователей</li></a>
                   <a href="#"><li>База данных</li></a>
                   <a href="#"><li>Консультация</li></a>
-                  <a href="CMS.html"><li>CMS</li></a>
+                  <a href="#"><li>CMS</li></a>
                 </ul>
               </nav>
                 </div>
