--- a/samotoi/autorize/templates/autorize/UResults.html
+++ b/samotoi/autorize/templates/autorize/UResults.html
@@ -18,7 +18,7 @@
     <div class="headerRight">
     <ul>
           <li>
-            <a href="#">Главная</a>
+            <a href="/">Главная</a>
           </li>
           <li>
             <a href="#">О нас</a>
@@ -30,7 +30,7 @@
 
       <a href="#">
       <div class='nik'>
-          <img src="{% static 'autorize/img/user.png'%}"></img>
+          <img src="{% static 'autorize/img/user.png'%}" ></img>
           <h4>№674533</h4>
           </div>
         </a>
@@ -40,15 +40,15 @@
     <div class="office">
         <div class="block_1">
             <div class="nav_1">
-                <img class="user_2" src="{% static 'autorize/img/user2.png'%}"></img>
+                <img class="user_2" src="{% static 'autorize/img/user2.png'%}" ></img>
                 <h2 class="name_1">№674533</h2>
                 <div class="line_1"></div>
                 <div class="nav_2">
               <nav>
                 <ul>
                   <a href="/history"><li>Мои тесты</li></a>
-                  <a href="/results"><li>Результаты тестов</li></a>
-                  <a href="#"><li>Консультация</li></a>
+                  <a href="#"><li>Результаты тестов</li></a>
+                  <a href="consultation"><li>Консультация</li></a>
                 </ul>
               </nav>
                 </div>
@@ -57,26 +57,10 @@
         </div>
         <div class="block_2">
             <h1>
-              Консультация
+              Ваши тесты
             </h1>
-            <p class="message_2">Для лучшего понимани ваших результатов рекомендуем пройти<br/> консультацию со специальстом, который подробно объяснит все<br/> детали и ответит на ваши вопросы</p>
-            <form method="post" name="consultation">
-              <div>
-               <label id="number-phone">Ваш телефон</label>
-              <input class="form" type="tel" name="phone" id="number-phone"/>
-              </div>
-              <div>
-               <label for="interest">Интересующий тест</label>
-              <input class="form" type="text" name="test" id="interest"/>
-              </div>
-              <input type="checkbox" id="politics"/>
-              <label for="politics">Я знаком с условиями доступа</label>
-              <div>
-              <a href="#"><button class="save">Оставить заявку</button></a>
-              </div>
-              </form>
-          </div>
-          </div>
+            <h2 class="message_1">Тут пока что пусто</h2>
+        </div>
  </div>
   </body>
 
