--- a/samotoi/autorize/static/autorize/css/standard.css
+++ b/samotoi/autorize/static/autorize/css/standard.css
@@ -75,8 +75,14 @@ p{
     justify-content: center;
 }
 
+
 input, label {
   display:block;
+  border: none;
+}
+
+input[type="radio"]{
+  display: none;
 }
 
 .form{
