--- a/samotoi/autorize/templates/account/login.html
+++ b/samotoi/autorize/templates/account/login.html
@@ -14,9 +14,10 @@
         <input class = "form" type="password" name="password" placeholder="Пароль" autocomplete="current-password" required id="id_password">
       </div> 
 
-      <input type="checkbox" id="politics" onclick="check();" value="" autocomplete="on"/>
-          <label for="politics">Я знаком с условиями доступа</label>
-
+    <div class="checbox">
+      <input type="checkbox" id="politics" required/>
+      <label for="politics">Я знаком с условиями доступа</label>
+    </div>
       <div class = "bt4">
         <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
       </div>   
