--- a/samotoi/autorize/templates/autorize/Test.html
+++ b/samotoi/autorize/templates/autorize/Test.html
@@ -46,8 +46,14 @@
     <main>
       <div class="test_title">
           <h1>Речевые способности</h1>
+          <div class="timer">
+            <div class="timer__items">
+              <div class="timer__item timer__minutes">00</div>
+              <div class="timer__item timer__seconds">00</div>
+            </div>
+          </div>
       </div>
-
+    <div class="test-area">
     <div class="speech_question1 speech_question ">
       <div class="question">
           <h2>Определите, какое слово по смыслу является лишним?</h2>
@@ -74,7 +80,6 @@
               <label for="radio-4">Г</label>
             </div>
             </div>
-      </div>
     </div>
 
       <div class="speech_question2 speech_question">
@@ -600,7 +605,7 @@
             </div>
             </div>  
         </div>
-      </div>
+      
 
       <div class="speech_question21 speech_question">
         <div class="question">
@@ -629,7 +634,6 @@
               <label for="radio-84">Г</label>
             </div>
             </div>  
-        </div>
       </div>
 
 
@@ -661,7 +665,6 @@
             </div>
             </div>  
         </div>
-      </div>
 
 
       <div class="speech_question23 speech_question">
@@ -691,7 +694,6 @@
               <label for="radio-92">Г</label>
             </div>
             </div>  
-        </div>
       </div>
 
 
@@ -723,7 +725,6 @@
             </div>
             </div>  
         </div>
-      </div>
 
 
       <div class="speech_question25 speech_question">
@@ -899,11 +900,8 @@
                       </div>
                       </div>  
                   </div>
-      
-      
-      
-      </div>
       <a href="#>"><button class="bt6">Далее</button></a>
+    </div>
     </main>
   </body>
   <footer>
@@ -928,3 +926,4 @@
     </div>
     
   </footer>
+</html>
