--- a/samotoi/autorize/templates/autorize/UConsultation.html
+++ b/samotoi/autorize/templates/autorize/UConsultation.html
@@ -46,13 +46,13 @@
                 <div class="nav_2">
               <nav>
                 <ul>
-                  <a href="/history"><li>Мои тесты</li></a>
+                  <a href="/profile"><li>Мои тесты</li></a>
                   <a href="/results"><li>Результаты тестов</li></a>
                   <a href="#"><li>Консультация</li></a>
                 </ul>
               </nav>
                 </div>
-                <a href="#"><button>Выйти</button></a>
+                <a href="/logout"><button>Выйти</button></a>
         </div>
         </div>
         <div class="block_2">
